gccida/c3/assemble_start_function
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/varasm.c:1661:11: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
else if ( in_section_0 != in_text ) 
          ^~~~~~~~~~~~
          in_section
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/varasm.c:1664:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_text; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/varasm.c:1707:33: error: use of undeclared identifier 'off_73AB94'
fprintf( ( FILE *)asm_out_file, off_73AB94, 6755617LL); 
                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_start_function/src/obj/varasm.o] Error 1
